# Stanford-CS336-spring25

./: .gitignore  README.md
assignment1-basics/: README.md
assignment1-basics/cs336_basics/: check_pointing.py  generate.py  tokenizer.py  train.py
assignment1-basics/cs336_basics/model/: modules.py  transformer.py
assignment1-basics/cs336_basics/trainer/: utils.py
assignment1-basics/tests/: SGD_test.py
assignment2-systems/: README.md  SETUP.md  attn_time_benchmark.md  attn_time_benchmark_opt.md  benchmark_res(1).md  benchmark_res.md  flash_attention_benchmark.csv  pyproject.toml  requirements.txt  timeout:
assignment2-systems/cs336-basics/: pyproject.toml
assignment2-systems/cs336_systems/Benckmark/: benchmark.py  mixed_percision_script.py
assignment2-systems/cs336_systems/flash_attention/: benchamark_script.py  benchmark_flash.py  flash_att_pytorch.py  flash_att_triton.py  triton_example.py
assignment2-systems/tests/: adapters.py
assignment3-scaling/: README.md
assignment4-data/: README.md  analyze_training_data.py  debug_classifier.py
assignment4-data/cs336_data/: clean_HQ.py  quality_classifier_train_script.py  quality_inference.py  sample_LQ.py  scrape_quality_data.py  script_22.py  script_23.py
assignment4-data/tests/: adapters.py
assignment5-alignment/: GRPO_TRAINING_GUIDE.md  README.md  download_math_dataset.py
assignment5-alignment/scripts/: convert_dataset_format.py  ei_experiment.py  grpo_train_loop.py  script_32.py  sft_experiment.py
assignment5-alignment/tests/: adapters.py  conftest.py
(+1 files in other folders)
