[project]
name = "cs336-systems"
version = "1.0.5"
description = "CS336 Assignment 2 - Systems"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cs336_basics",
    "humanfriendly",
    "matplotlib",
    "numpy",
    "pytest>=8",
    "regex>=2024.11.6",
    "torch==2.8.0",  # PyTorch 2.8.0 stable has sm_120 support for RTX 5090!
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "pandas>=2",
    "tabulate",
]

[tool.uv]
package = true
python-preference = "managed"

[tool.uv.sources]
cs336_basics = { path = "./cs336-basics", editable = true }

# PyTorch 2.8.0 stable version includes sm_120 support for RTX 5090
# No special index or nightly builds needed!
